Fix mobile navbar layout shift by keeping scrollbar always visible

--- a/site.css
+++ b/site.css
@@ -90,6 +90,7 @@ html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll;
 }
 
 body {
